updated text and bib

--- a/LatexManuscript/Legacy.bib
+++ b/LatexManuscript/Legacy.bib
@@ -541,3 +541,13 @@ eprint = {/oup/backfile/content_public/journal/gigascience/6/9/10.1093_gigascien
   year={2000},
   publisher={Genetics Soc America}
 }
+@article{mafessoni2018turning,
+  title={Turning Vice into Virtue: Using Batch-Effects to Detect Errors in Large Genomic Data Sets},
+  author={Mafessoni, Fabrizio and Prasad, Rashmi B and Groop, Leif and Hansson, Ola and Pr{\"u}fer, Kay},
+  journal={Genome biology and evolution},
+  volume={10},
+  number={10},
+  pages={2697--2708},
+  year={2018},
+  publisher={Oxford University Press}
+}
