--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -71,7 +71,8 @@ The second phase of the 1kGP implemented multiple technological and analytical i
 
 Yet, because of the extraordinary value of freely available data, early data from the 1kGP is still widely used to impute untyped variants, to estimate allele frequencies, and to answer a wide range of medical and evolutionary questions.
 This raises the question of whether and how such legacy data should be included in contemporary analyses alongside more recent cohorts.
-Here we point out how large and previously unreported batch effects in the early phases of the 1kGP still lead to incorrect genetic conclusions through population genetic analyses and spurious GWAS associations as a result of imputation using the 1kGP as a reference.
+\todo{Mafessoni et al. recently identified a batch effect in the 1kGP using an approach that identifies individuals and loci with unusual linkage disequelibrium patterns, these result partially overlap with the variants we identified using a more statistically powerful method \citep{mafessoni2018turning}.}
+Here we point out how large and largely unreported batch effects in the early phases of the 1kGP still lead to incorrect genetic conclusions through population genetic analyses and spurious GWAS associations as a result of imputation using the 1kGP as a reference.
 
 \subsection{Mutational Signatures}
 
@@ -188,6 +189,10 @@ By contrast, variants that do not pass the 1kGP strict mask are more unevenly di
 \todo{The mutational 3-mer substitution patterns of this list of variants is similar to the signature identified in the single population test of the 1kGP JPT in that there is an enrichment in *AC${\rightarrow}$*CC.
 However, another enrichment profile is significantly enriched : TAT${\rightarrow}$TTT, TCT${\rightarrow}$TTT and ACA${\rightarrow}$AAA (reverse complement : TGT${\rightarrow}$TTT). These three enrichments can be summarized as T*T${\rightarrow}$TTT.}
 
+\todo{A recent publication by Mafessoni et al. also identified a batch effect in the 1kGP using a different method.
+We find that only 10\% of the variants they identified are in our list of suspicious variants and have correlated p-values to those identified using the GCAT method \ref{Mafessoni_MutSpect}.
+Moreover, the variants they identified are not enriched in the mutational spectra described above \ref{Mafessoni_MutSpect}. }
+
 
 \begin{table}[h!]
 \centering
@@ -209,7 +214,7 @@ The number of variants included in the analysis for SNPs, SNPs in repeat regions
 
 In 2017, Lan et al. resequenced 83 Han Chinese individuals from the 1kGP \citep{Lan2017}. To assess consistency between the two datasets, we consider consistency of genotype calls for $Q$-associated variants that are predicted to be polymorphic in these 83 individuals according to the 1kGP.
 Among the 296 such variants that were $Q$-associated in the CHB or CHS, only 6 are present in the resequenced data (Figure \ref{90HanSFS}). 
-This is more than our nominal false discovery rate of \todo{$\alpha = 0.01$} of the sites. 
+\todo{This is more than the number of false positives predicted by our nominal false discovery rate of $\alpha = 0.01$ ($0.01 \times 296 = 2.96$)}. 
 Thus a small number of variants associated to $Q$ are present in the population but with somewhat biased genotypes. 
 
 
@@ -217,9 +222,9 @@ We did a similar analysis using all variants identified in the GCAT model (rathe
 Of the 15,270 $Q$-associated variants identified globally, 6,307 are polymorphic in the 1kGP for the 83 resequenced individuals  (See Figure \ref{90HanSFS_full}).
 From this subset, only 1,139 (or 18\%) are present in the resequenced data.
 The allele frequencies of these variants are nearly identical between datasets suggesting that among these 83 individuals, these variants are properly genotyped in the 1kGP.
-\todo{In the GCAT test, a variant may be significantly associated to $Q$ in some populations, but not necessarily all populations. 
-Thus, the 1,139 variants present in the resequenced Han might have stronger associations to $Q$ in in individuals from other populations.}
-There are 5 \todo{variants} that show differing frequencies between both datasets that are likely explained by biased genotypes.
+\todo{Some mutational signatures are heterogenous where not all suspicious variants are completely spurious in all individuals or populations. 
+Some mutational signatures reproduce across cohorts, whereas others do not and may be due to the different sequencing platforms used.}
+There are 5 variants that show differing frequencies between both datasets that are likely explained by biased genotypes.
 The vast majority of polymorphisms associated with $Q$ are not present at all in the resequencing dataset, supporting sequencing rather than cell line artifacts.
 
 Among the 15,270 $Q$-associated variants, 613 are present on Illumina's Omni 2.5 chip (See Figure \ref{Omni}). 
@@ -233,13 +238,13 @@ From the perspective of researchers, they act as black-box imputation machines t
 To investigate whether suspicious calls from the 1kGP are imputed into genotyping studies, we submitted genotype data for the first two chromosomes of the 1kGP genotype data to the Michigan Imputation Server.
 We found that all of the variants associated with $Q$ were imputed back in the samples.
 This suggests that the imputation reference panel still includes individuals with low $Q$, and the dubious variants will be imputed in individuals who most closely match the low-quality individual.
-\todo{These  $Q$-associated variants could also compromise the imputation of real variants that happen to be  close by, causing not only improper imputation, but also false negatives for real variants.}
+These $Q$-associated variants could also compromise the imputation of nearby real-variants causing not only improper imputation, but also false negatives for real variants.
 
 We searched the literature for any GWAS that might have reported these $Q$-associated variants as being significantly associated with some biological trait, even though there is no particular reason for these variants to be associated with phenotypes.
 The NHGRI-EBI Catalog of published genome-wide association studies identified seventeen recent publications that had reported these variants as close to or above the genome-wide significant threshold (Table \ref{gwasTable}).
-\todo{Some of these publications noted that these variants were not flanked by linkage disequilibrium peaks \citep{Mandage2017}.
+Some of these publications noted that these variants were not flanked by linkage disequilibrium peaks \citep{Mandage2017}.
 Indeed, we expect a large number of these variants to be filtered out by some quality controls like the Hardy-Weinberg  equilibrium test.
-However, the fact that some of these variants are not removed and that the great majority of these variants are missing from higher quality datasets means that these $Q$-associated variants should be flagged for removal to avoid spurious association.}
+However, the fact that some of these variants are not removed and that the great majority of these variants are missing from higher quality datasets means that these $Q$-associated variants should be flagged for removal to avoid spurious association.
 
 Eleven of these studies included the 1kGP in their reference panel for imputation \citep{xu2012genome, lutz2015genome, park2015mercapturic, astle2016allelic, herold2016family,  suhre2017connecting, lopez2017genome, tian2017genome,  spracklen2017association,  nagy2017exploration, gao2018genome} and another used the 1kGP sequence data and cell lines directly \citep{Mandage2017}.
 One study used an in-house reference panel for imputation \citep{nishida2018key}, two studies genotyped individuals and imputed the data using the HapMap II as a reference  database for imputation \citep{Kraja2011, Ebejer2013} and two studies used genotyping chip data \citep{yucesoy2015genome, ellinghaus2016analysis}. 
@@ -254,9 +259,7 @@ The majority (92.7\%) of the $Q$-associated variants are strongly biased in that
 By contrast, most $Q$-associated variants reported in the GWAS catalogue had weak bias (See Figure \ref{Pub_30}), with three exceptions.
 One study reports associations with seven $Q$-associated variants that we find to be highly biased \citep{Mandage2017}. 
 That study considered copy number of Epstein-Barr virus (EBV) sequence in the 1kGP as a phenotype. 
-\todo{It is unlikely that EBV copy number associations to these seven $Q$-associated variants could be explained by population structure as the data quality of an individual is also correlated with sequencing date.
-This suggests that there may be issues with how EBV is mapped to the genomes of individuals with low quality sequence data.}
-Thus the phenotype in that study is likely confounded by the same technical artefacts that lead to biased SNP calling.
+\todo{It is plausible that the EBV copy number phenotype is sensitive to mapping and in this study, may be confounded by the same technical artefacts that lead to biased SNP calling.}
 
 
 
@@ -455,6 +458,14 @@ The populations that tend to have the most individuals with low $Q$ also tend to
 \label{strict_gcat_mutational_enrichment}
 \end{figure}
 
+
+\begin{figure}[ht]
+\centering
+\includegraphics[width=13cm,keepaspectratio]{../Figures/Mafessoni_MutSpect.jpg}
+\caption{ \textbf{A} Comparison of the p-values from the association to unusual LD from \cite{mafessoni2018turning} and the p-values from the GCAT association test to quality metrics.
+\textbf{B} Mutation spectrum of the variants significantly associated to unusual LD from \cite{mafessoni2018turning}. }  
+\label{Mafessoni_MutSpect}
+\end{figure}
 
 \begin{figure}[ht]
 \centering
